[package]
name = "spirv_combimgsampsplitter"
version = "0.2.0"
edition = "2021"
description = "SPIRV combined image sampler splitter for wgpu"
repository = "https://github.com/davnotdev/spirv_combimgsampsplitter"
homepage = "https://github.com/davnotdev/spirv_combimgsampsplitter"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics"]
categories = ["graphics"]

[dependencies]
