[package]
name = "spirv_combimgsampsplitter"
version = "0.3.0"
edition = "2024"
description = "SPIRV combined image sampler splitter for wgpu"
repository = "https://github.com/davnotdev/spirv_combimgsampsplitter"
homepage = "https://github.com/davnotdev/spirv_combimgsampsplitter"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics"]
categories = ["graphics"]

[dev-dependencies]
naga = { version = "23", features = ["spv-in", "wgsl-out"]}

