[workspace]
members = ["ffi"]

[package]
name = "spirv-webgpu-transform"
version = "0.3.0"
edition = "2024"
description = "Transform SPIRV to be webgpu friendly"
repository = "https://github.com/davnotdev/spirv-webgpu-transform"
homepage = "https://github.com/davnotdev/spirv-webgpu-transform"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics"]
categories = ["graphics"]

[dev-dependencies]
naga = { version = "23", features = ["spv-in", "wgsl-out"]}
spirv-tools = "0.13"

